--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,90 @@
 /* inspect for fonts etc. */
+html {
+  box-sizing: border-box;
+  background-color: #101010;
+  color: white;
+  height: 100%;
+  width: 100%;
+}
+
+header {
+  border-bottom: 1px solid black;
+  height: 50px;
+  width: 100%;
+  background-color: #383838;
+}
+
+#logo {
+  border-radius: 50px;
+  height: 35px;
+  width: 35px;
+  margin: 7px 5px 5px 19px;
+}
+
+.main-content {
+  border: solid 2px white;
+  width: 65%;
+  height: 100%;
+  margin: auto;
+}
+
+.overview {
+  text-align: center;
+}
+
+aside {
+  border: 2px solid white;
+  float: left;
+  height: 450px;
+  width: 25%;
+}
+
+.github-repositories {
+  border: 2px solid pink;
+  float: right;
+  width: 74%;
+  height: 100%;
+}
+
+.repository-list {
+  padding: 0;
+  margin: 0;
+}
+
+.repositories {
+  border: 1px solid blueviolet;
+  height: 89px;
+  width: 100%;
+}
+
+li {
+  display: inline-block;
+  position: relative;
+  width: fit-content;
+  padding: 15px 10px;
+  list-style: none;
+  margin: 0px;
+  font-size: 18px;
+}
+
+#search-bar {
+  height: 48px;
+}
+
+.star {
+  position: relative;
+  float: right;
+  margin: 15px;
+  padding: 0px 25px;
+  background-color: gray;
+}
+
+.public {
+  display: inline-block;
+  font-size: 10px;
+  border: 1px solid gray;
+  border-radius: 25px;
+  width: fit-content;
+  padding: 1px 3px;
+  margin: 0px;
+}
