--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,49 +1,121 @@
 /* inspect for fonts etc. */
 html {
-  box-sizing: border-box;
   background-color: #101010;
   color: white;
   height: 100%;
   width: 100%;
 }
 
-header {
-  border-bottom: 1px solid black;
-  height: 50px;
-  width: 100%;
-  background-color: #383838;
-}
-
-#logo {
-  border-radius: 50px;
-  height: 35px;
-  width: 35px;
-  margin: 7px 5px 5px 19px;
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
 .main-content {
-  border: solid 2px white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  /* border: solid 2px white; */
   width: 65%;
   height: 100%;
   margin: auto;
 }
 
-.overview {
+.github-repositories {
+  display: flex;
+  flex-direction: column;
+  /* border: 2px solid pink; */
+  width: 74%;
+  height: 100%;
+}
+
+li {
   text-align: center;
+  align-items: baseline;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  float: left;
+  list-style: none;
+  font-size: 17px;
+  height: 100%;
+  width: fit-content;
+}
+
+li div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 2;
+  padding-top: 5px;
+}
+
+.status {
+  width: fit-content;
+  font-size: 10px;
+  margin: auto;
+}
+
+.status-div {
+  width: fit-content;
+  justify-self: left;
+}
+
+.status img {
+  float: left;
+  height: 10px;
+  width: 10px;
+  padding-right: 3px;
+}
+
+.title-div {
+  align-items: center;
+}
+
+a {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  color: lightskyblue;
 }
 
 aside {
-  border: 2px solid white;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  border: 2px solid red;
   float: left;
   height: 450px;
   width: 25%;
 }
 
-.github-repositories {
-  border: 2px solid pink;
+.public {
+  font-size: 10px;
+  border: 1px solid gray;
+  border-radius: 25px;
+  width: fit-content;
+  height: fit-content;
+  padding: 1px 5px;
+  margin: 0px;
+}
+
+.star {
   float: right;
-  width: 74%;
-  height: 100%;
+  margin: 15px;
+  padding: 0px 17px;
+  background-color: #484848;
+  border-radius: 5px;
+  color: white;
+}
+
+.star svg {
+  height: 10px;
+  width: 10px;
+}
+
+.repositories {
+  border-bottom: 1px solid #484848;
+  height: 89px;
+  width: 100%;
 }
 
 .repository-list {
@@ -51,40 +123,6 @@ aside {
   margin: 0;
 }
 
-.repositories {
-  border: 1px solid blueviolet;
-  height: 89px;
-  width: 100%;
-}
-
-li {
-  display: inline-block;
-  position: relative;
-  width: fit-content;
-  padding: 15px 10px;
-  list-style: none;
-  margin: 0px;
-  font-size: 18px;
-}
-
 #search-bar {
   height: 48px;
-}
-
-.star {
-  position: relative;
-  float: right;
-  margin: 15px;
-  padding: 0px 25px;
-  background-color: gray;
-}
-
-.public {
-  display: inline-block;
-  font-size: 10px;
-  border: 1px solid gray;
-  border-radius: 25px;
-  width: fit-content;
-  padding: 1px 3px;
-  margin: 0px;
 }
