--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /* inspect for fonts etc. */
 html {
-  background-color: #101010;
+  background-color: #0d1117;
   color: white;
   height: 100%;
   width: 100%;
@@ -31,6 +31,8 @@ html {
 }
 
 li {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   text-align: center;
   align-items: baseline;
   display: grid;
@@ -75,7 +77,9 @@ a {
   margin: 10px;
   display: flex;
   flex-direction: column;
-  color: lightskyblue;
+  color: #2f81f7;
+  font-size: var(--h3-size, 20px);
+  font-weight: var(--base-text-weight-semibold, 600);
 }
 
 aside {
@@ -101,10 +105,11 @@ aside {
 .star {
   float: right;
   margin: 15px;
-  padding: 0px 17px;
-  background-color: #484848;
+  padding: 3px 12px;
+  background-color: #21262d;
   border-radius: 5px;
-  color: white;
+  color: #c9d1d9;
+  /* box-shadow: var(--color-star-shadow), var(--color-star-inset-shadow); */
 }
 
 .star svg {
