--- a/styles/header.css
+++ b/styles/header.css
@@ -32,16 +32,57 @@ header {
   border-radius: 50px;
   height: 25px;
   width: 25px;
-  margin: 12px 5px 5px 25px;
+  margin-right: 10px;
 }
 
 .header-left {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  height: 100%;
+  width: fit-content;
+  float: left;
+  margin: 12px 15px 5px 25px;
 }
 
-#form {
-  margin: 10px 8px;
+.header-left nav {
+  font-weight: var(--base-text-weight-semibold, 600);
+  font-size: 14px;
+  margin-top: 5px;
+  margin-right: 10px;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  float: right;
+  margin: 15px 5px 5px 25px;
+}
+
+.header-right div {
+  margin-right: 10px;
+}
+
+.header-form {
+  flex: 1 !important;
+  font-family: inherit;
+  font: inherit;
+  font-size: inherit;
+  color: rgba(255, 255, 255, 0.75);
   border-radius: 10px;
+  margin-right: 10px;
+  height: 48px;
+}
+
+.search {
+  border-color: rgba(240, 246, 252, 0.1);
+  background: none;
+  width: 300px;
+}
+
+.header-pic {
+  height: 20px;
+  width: 20px;
+  border-radius: 25px;
 }
