--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,11 @@ html {
   width: 100%;
 }
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -20,6 +25,8 @@ html {
   width: 65%;
   height: 100%;
   margin: auto;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #484848;
 }
 
 .github-repositories {
@@ -31,8 +38,6 @@ html {
 }
 
 li {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   text-align: center;
   align-items: baseline;
   display: grid;
@@ -82,16 +87,6 @@ a {
   font-weight: var(--base-text-weight-semibold, 600);
 }
 
-aside {
-  display: flex;
-  flex-direction: row;
-  align-self: flex-start;
-  border: 2px solid red;
-  float: left;
-  height: 450px;
-  width: 25%;
-}
-
 .public {
   font-size: 10px;
   border: 1px solid gray;
@@ -104,12 +99,38 @@ aside {
 
 .star {
   float: right;
-  margin: 15px;
+  margin: 15px 0px;
   padding: 3px 12px;
   background-color: #21262d;
-  border-radius: 5px;
+  border-color: rgba(240, 246, 252, 0.1);
+  border-right-width: 0px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   color: #c9d1d9;
   /* box-shadow: var(--color-star-shadow), var(--color-star-inset-shadow); */
+}
+
+.search-button {
+  float: right;
+  padding: 3px 12px;
+  background-color: #21262d;
+  border-color: rgba(240, 246, 252, 0.1);
+  border-radius: 5px;
+  border-right-width: 0px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  color: #c9d1d9;
+}
+
+.star2 {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .star svg {
@@ -128,6 +149,23 @@ aside {
   margin: 0;
 }
 
+.list-form {
+  margin: 10px 0px 0px 10px;
+}
+
 #search-bar {
-  height: 48px;
+  height: 35px;
+}
+
+#search-bar input {
+  float: left;
+  /* width: 50%; */
+}
+
+.name-button {
+  margin-left: 10px;
+}
+
+#repo {
+  border-bottom: 2px solid rgb(249, 129, 86);
 }
