--- a/assets/css/styles/styles.css
+++ b/assets/css/styles/styles.css
@@ -40,8 +40,8 @@ body {
 li {
   text-align: center;
   align-items: baseline;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  flex-direction: row;
   float: left;
   list-style: none;
   font-size: 17px;
@@ -144,7 +144,13 @@ a {
   width: 100%;
 }
 
+.repository-name {
+  height: 89px;
+  width: 100%;
+}
+
 .repository-list {
+  flex-direction: row;
   padding: 0;
   margin: 0;
 }
@@ -167,4 +173,8 @@ a {
 
 .name-button {
   margin-left: 10px;
+}
+
+.repo-container {
+  display: inline-block;
 }
