--- a/assets/css/styles/styles.css
+++ b/assets/css/styles/styles.css
@@ -29,15 +29,15 @@ body {
   border-bottom: 1px solid #484848;
 }
 
-.github-repositories {
-  display: flex;
-  flex-direction: column;
+.repostitories-list {
+  /* display: flex;
+  flex-direction: column; */
   /* border: 2px solid pink; */
   width: 74%;
   height: 100%;
 }
 
-li {
+/* li {
   text-align: center;
   align-items: baseline;
   display: flex;
@@ -46,15 +46,16 @@ li {
   list-style: none;
   font-size: 17px;
   height: 100%;
+  width: 100%;
   width: fit-content;
-}
+} */
 
-li div {
+/* li div {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column: 2;
   padding-top: 5px;
-}
+} */
 
 .status {
   width: fit-content;
@@ -144,13 +145,17 @@ a {
   width: 100%;
 }
 
-.repository-name {
+#repository-name {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
   height: 89px;
   width: 100%;
 }
 
-.repository-list {
-  flex-direction: row;
+#repos-list {
+  display: inline-block;
   padding: 0;
   margin: 0;
 }
