--- a/assets/css/styles/footer.css
+++ b/assets/css/styles/footer.css
@@ -5,15 +5,19 @@ footer {
   margin: 10px auto;
 }
 
-.nav-list {
+#nav-list {
+  list-style: none;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-self: center;
   color: #2f81f7;
   font-size: 12px;
+  width: 100%;
   margin: 20px 10px;
 }
 
-.nav-list li {
+#nav-list li {
   font-size: 12px;
 }
 
